--- a/codes/global.html
+++ b/codes/global.html
@@ -21,83 +21,5 @@
                 $(this).siblings('.w-form-done').css({ 'min-height': formHeight });
             });
         });
-
-        // ====================
-        // HubSpot API
-        // ====================
-        let hsApiUrl = 'https://api.hsforms.com/submissions/v3/integration/submit/4657307/';
-        let formData = {
-            fields: [],
-        };
-        let UTMs = ['utm_medium', 'utm_source', 'utm_campaign', 'utm_term', 'utm_content'];
-
-        $('[hs-form]').on('submit', function (event) {
-            let hsForm = $(this);
-            let hsFormID = $(this).attr('hs-form');
-            if (hsFormID == undefined) return;
-            let hsEndPoint = hsApiUrl + hsFormID;
-            let redirectURL = $(this).attr('redirect-url');
-            // Add the form data to the formData object
-            hsForm.find('[hs-form-field]').each(function () {
-                let field = {
-                    name: $(this).attr('hs-form-field'),
-                    value: $(this).val(),
-                };
-                formData.fields.push(field);
-            });
-            // Add the UTM parameters to the formData object
-            UTMs.forEach(utm => {
-                let utmValue = new URLSearchParams(window.location.search).get(utm);
-                if (utmValue != null) {
-                    let field = {
-                        name: `${utm}`,
-                        value: utmValue,
-                    };
-                    formData.fields.push(field);
-                }
-            });
-            console.log('HubSpot Form Data:', formData);
-            // Get page information
-            let pageName = document.title; // Use the page title as the name
-            let pageUrl = window.location.href; // Get the full URL of the page
-            let hubspotCookie = document.cookie.match(/(?:^|;\s*)hubspotutk\s*=\s*([^;]*)/);
-            let htuk = hubspotCookie ? hubspotCookie[1] : null;
-            // Create the hs_context object
-            if (htuk) {
-                formData.context = {
-                    hutk: htuk,
-                    pageUri: pageUrl,
-                    pageName: pageName,
-                };
-            }
-            // Make a POST request to HubSpot
-            fetch(hsEndPoint, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(formData),
-            })
-                .then(response => response.json())
-                .then(data => {
-                    console.log('HubSpot Form Submission Successful:', data);
-
-                    const { redirectUri } = data;
-
-                    if (redirectURL != undefined) {
-                        setTimeout(() => {
-                            window.location = redirectURL;
-                        }, 1000);
-                    } else if (redirectUri != undefined) {
-                        setTimeout(() => {
-                            window.location = redirectUri;
-                        }, 1000);
-                    }
-                })
-                .catch(error => {
-                    console.error('HubSpot Form Submission Error:', error);
-                    // Handle error, e.g., show an error message to the user
-                });
-        });
-    });
+    }); // Make sure to keep this in the end
 </script>
