--- a/_project/head.html
+++ b/_project/head.html
@@ -37,6 +37,17 @@
   }
 </style>
 
+<!-- Navbar -->
+ <style>
+  .navbar-dynamic-content.is-logged-out {
+    opacity: 0;
+  }
+
+  .navbar-dynamic-content.is-logged-in {
+    opacity: 0;
+  }
+ </style>
+
 <!-- From Previous Site -->
 <script>
   !(function () {
@@ -161,8 +172,6 @@
   fbq('init', '231048239686634');
   fbq('track', 'PageView');
 </script>
-<!-- End Facebook Pixel Code -->
-
 
 <!-- TikTok Pixel Code Start -->
 <script>
@@ -179,8 +188,25 @@
     ttq.page();
   }(window, document, 'ttq');
 </script>
-<!-- TikTok Pixel Code End -->
+
+<!-- LinkedIn Pixel Code Start -->
+<script type="text/javascript">
+  _linkedin_partner_id = "619348";
+  window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+  window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+  </script><script type="text/javascript">
+  (function(l) {
+  if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
+  window.lintrk.q=[]}
+  var s = document.getElementsByTagName("script")[0];
+  var b = document.createElement("script");
+  b.type = "text/javascript";b.async = true;
+  b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+  s.parentNode.insertBefore(b, s);})(window.lintrk);
+  </script>
 
 <!-- Start of HubSpot Embed Code -->
 <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/4657307.js"></script>
-<!-- End of HubSpot Embed Code -->
+
+<!-- Clearbit -->
+<script defer src="https://tag.clearbitscripts.com/v1/pk_4241bbc761971a439533f4070af36117/tags.js" referrerpolicy="strict-origin-when-cross-origin"></script>
