--- a/_project/footer.html
+++ b/_project/footer.html
@@ -6,3 +6,5 @@
 <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
 <!-- DrawSVGPlugin -->
 <script src="https://joinamply.github.io/catch-release/DrawSVGPlugin.min.js"></script>
+<!-- Marketing & App codes -->
+<script src="https://cdn.jsdelivr.net/gh/joinamply/catch-release@latest/marketing-and-app-codes.js"></script>
