--- a/_styles/components.html
+++ b/_styles/components.html
@@ -53,6 +53,10 @@
             display: flex;
         }
     }
+
+    .announcement-bar_component a {
+        color: inherit;
+    }
 </style>
 
 <!-- Button Rouned -->
